# pure-python-adb

./: .gitignore  HISTORY.rst  MANIFEST.in  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml
example/: screencap.py
ppadb/: __init__.py  client.py  client_async.py  connection.py  connection_async.py  device.py  device_async.py  protocol.py
ppadb/command/host/: __init__.py
ppadb/command/host_async/: __init__.py
ppadb/command/serial/: __init__.py
ppadb/command/transport/: __init__.py
ppadb/command/transport_async/: __init__.py
ppadb/plugins/device/: batterystats.py  batterystats_section.py  cpustat.py  input.py  traffic.py  utils.py  wm.py
ppadb/sync/: __init__.py
ppadb/sync_async/: __init__.py
ppadb/utils/: logger.py
scripts/: batterystats_codegen.py
test/: conftest.py  test_batterystats.py  test_cpu_stat.py  test_device.py  test_host.py  test_host_serial.py  test_logging.py  test_plugins.py
test_async/: async_wrapper.py  patchers.py  test_client_async.py  test_connection_async.py  test_device_async.py
