[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["*.test", "*.test.*", "test.*", "test"]

[project]
name = "pure-python-adb-reborn"
description = "Pure python implementation of the adb client"
version = "0.1.0"
dependencies = ["Exscript"]
#requires-python = ">= ???"
license = {text = "MIT License"}
readme = "README.rst"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Testing',
]

[project.urls]
Repository = "https://github.com/spm5065/pure-python-adb.git"

[project.optional-dependencies]

async = [
    "aiofiles>=0.4.0"
]

dev = [
    "pytest",
    "black",
    "ruff"
]